// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WitnessNotification renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderRadius": 10,
      "elevation": 3,
      "padding": 20,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 2,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#000",
          "fontSize": 20,
          "lineHeight": 26,
          "textAlign": "left",
        },
        {
          "fontWeight": "bold",
        },
        {
          "marginBottom": 10,
        },
      ]
    }
  >
    Witnessing Required
  </Text>
  <View
    style={
      {
        "marginBottom": 15,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 16,
            "lineHeight": 20,
          },
          {
            "fontWeight": "bold",
          },
        ]
      }
    >
      roll_call
      #
      create
      :
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Name: 
      rollcall1
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      ID: 
      uO7c5qv5zenCd99Q8gLgBg0amZpjUOrmSkN7wAuZ-KM=
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Created at: 
      2020-01-01
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Proposed start: 
      2020-01-01
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Proposed end: 
      2020-01-01
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Location: 
      BC410
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Description: 
      a description
    </Text>
  </View>
  <View
    style={
      {
        "marginBottom": 15,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 16,
            "lineHeight": 20,
          },
          {
            "fontWeight": "bold",
          },
        ]
      }
    >
      Message Information:
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Message ID: 
      G
      r
      y
      s
      Q
      Y
      y
      A
      E
      u
      -
      n
      B
      q
      8
      F
      3
      0
      Y
      e
      M
      K
      -
      G
      x
      t
      y
      N
      2
      w
      p
      B
      m
      1
      U
      R
      u
      q
      7
      X
      g
      I
      0
      =
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Received from: 
      wss://some-address.com:8000/
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Channel: 
      /root/-M259c5JlakLVlXBRa893pcE-4s7ssO8Jv5gXOvtreE=
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Sender: 
      J
      9
      f
      B
      z
      J
      V
      7
      0
      J
      k
      5
      c
      -
      i
      3
      2
      7
      7
      U
      q
      4
      C
      m
      e
      L
      4
      t
      5
      3
      W
      D
      f
      U
      g
      h
      a
      K
      0
      H
      p
      e
      M
      =
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Signature: 
      b
      R
      k
      z
      p
      G
      3
      T
      r
      -
      m
      W
      q
      D
      h
      P
      O
      8
      _
      u
      5
      p
      i
      R
      v
      S
      q
      T
      K
      X
      P
      9
      G
      e
      O
      L
      s
      r
      8
      n
      8
      1
      e
      S
      x
      g
      3
      C
      t
      4
      p
      R
      I
      D
      c
      l
      u
      L
      G
      G
      w
      r
      h
      a
      V
      -
      I
      N
      C
      K
      a
      G
      d
      T
      n
      v
      s
      e
      U
      j
      y
      V
      m
      7
      D
      w
      =
      =
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Received at: 
      2020-01-01
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Processed at: 
    </Text>
  </View>
  <View
    style={
      [
        {
          "marginBottom": 10,
        },
        {
          "marginTop": 10,
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="on-witness"
    >
      <View
        style={
          [
            {
              "backgroundColor": "#3742fa",
              "borderColor": "#3742fa",
              "borderRadius": 8,
              "borderWidth": 1,
              "padding": 8,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 18,
              "margin": 3,
              "textAlign": "center",
            }
          }
        >
          Witness Message
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "marginBottom": 10,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="on-decline"
    >
      <View
        style={
          [
            {
              "backgroundColor": "#3742fa",
              "borderColor": "#3742fa",
              "borderRadius": 8,
              "borderWidth": 1,
              "padding": 8,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 18,
              "margin": 3,
              "textAlign": "center",
            }
          }
        >
          Decline Message
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`WitnessNotification renders correctly 3 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderRadius": 10,
      "elevation": 3,
      "padding": 20,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 2,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#000",
          "fontSize": 20,
          "lineHeight": 26,
          "textAlign": "left",
        },
        {
          "fontWeight": "bold",
        },
        {
          "marginBottom": 10,
        },
      ]
    }
  >
    Witnessing Required
  </Text>
  <Text>
    No data available.
  </Text>
  <View
    style={
      [
        {
          "marginBottom": 10,
        },
        {
          "marginTop": 10,
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="on-witness"
    >
      <View
        style={
          [
            {
              "backgroundColor": "#3742fa",
              "borderColor": "#3742fa",
              "borderRadius": 8,
              "borderWidth": 1,
              "padding": 8,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 18,
              "margin": 3,
              "textAlign": "center",
            }
          }
        >
          Witness Message
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "marginBottom": 10,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="on-decline"
    >
      <View
        style={
          [
            {
              "backgroundColor": "#3742fa",
              "borderColor": "#3742fa",
              "borderRadius": 8,
              "borderWidth": 1,
              "padding": 8,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 18,
              "margin": 3,
              "textAlign": "center",
            }
          }
        >
          Decline Message
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`WitnessNotification renders correctly without description 1`] = `
<View
  style={
    {
      "backgroundColor": "#fff",
      "borderRadius": 10,
      "elevation": 3,
      "padding": 20,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 2,
    }
  }
>
  <Text
    style={
      [
        {
          "color": "#000",
          "fontSize": 20,
          "lineHeight": 26,
          "textAlign": "left",
        },
        {
          "fontWeight": "bold",
        },
        {
          "marginBottom": 10,
        },
      ]
    }
  >
    Witnessing Required
  </Text>
  <View
    style={
      {
        "marginBottom": 15,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 16,
            "lineHeight": 20,
          },
          {
            "fontWeight": "bold",
          },
        ]
      }
    >
      roll_call
      #
      create
      :
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Name: 
      rollcall2
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      ID: 
      hA4d8e-lYmd4u5_Ltv5Lft_P8Q_YRMXI1UmikEYD8vc=
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Created at: 
      2020-01-01
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Proposed start: 
      2020-01-01
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Proposed end: 
      2020-01-01
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Location: 
      BC411
    </Text>
    <Text />
  </View>
  <View
    style={
      {
        "marginBottom": 15,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 16,
            "lineHeight": 20,
          },
          {
            "fontWeight": "bold",
          },
        ]
      }
    >
      Message Information:
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Message ID: 
      v
      U
      v
      7
      O
      Q
      u
      7
      k
      S
      d
      O
      g
      B
      z
      4
      Y
      3
      T
      w
      _
      i
      h
      -
      7
      O
      h
      B
      M
      H
      0
      R
      C
      9
      b
      2
      8
      _
      7
      p
      v
      y
      0
      =
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Received from: 
      wss://some-address.com:8000/
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Channel: 
      /root/-M259c5JlakLVlXBRa893pcE-4s7ssO8Jv5gXOvtreE=
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Sender: 
      J
      9
      f
      B
      z
      J
      V
      7
      0
      J
      k
      5
      c
      -
      i
      3
      2
      7
      7
      U
      q
      4
      C
      m
      e
      L
      4
      t
      5
      3
      W
      D
      f
      U
      g
      h
      a
      K
      0
      H
      p
      e
      M
      =
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Signature: 
      R
      G
      S
      1
      k
      F
      s
      j
      J
      X
      K
      T
      u
      3
      4
      O
      1
      1
      -
      n
      v
      o
      v
      x
      w
      q
      g
      k
      s
      L
      0
      q
      j
      x
      k
      0
      5
      K
      o
      V
      w
      M
      2
      U
      r
      f
      p
      H
      r
      i
      U
      q
      Z
      m
      2
      C
      B
      t
      V
      X
      y
      H
      r
      X
      a
      M
      Q
      e
      n
      e
      -
      d
      v
      o
      F
      j
      8
      o
      P
      _
      p
      j
      W
      o
      D
      w
      =
      =
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Received at: 
      2020-01-01
    </Text>
    <Text
      style={
        {
          "fontSize": 16,
          "lineHeight": 20,
        }
      }
    >
      Processed at: 
    </Text>
  </View>
  <View
    style={
      [
        {
          "marginBottom": 10,
        },
        {
          "marginTop": 10,
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="on-witness"
    >
      <View
        style={
          [
            {
              "backgroundColor": "#3742fa",
              "borderColor": "#3742fa",
              "borderRadius": 8,
              "borderWidth": 1,
              "padding": 8,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 18,
              "margin": 3,
              "textAlign": "center",
            }
          }
        >
          Witness Message
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "marginBottom": 10,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="on-decline"
    >
      <View
        style={
          [
            {
              "backgroundColor": "#3742fa",
              "borderColor": "#3742fa",
              "borderRadius": 8,
              "borderWidth": 1,
              "padding": 8,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 18,
              "margin": 3,
              "textAlign": "center",
            }
          }
        >
          Decline Message
        </Text>
      </View>
    </View>
  </View>
</View>
`;
